<resources>
    <string name="app_name">VSO</string>
    <string name="point_1">1. Information furnished by me in above application is true and correct to the best of my knowledge and belief. In case any information given in this application proves to be false or incorrect, I shall be responsible for the consequences.</string>
    <string name="point_2">2. Any document uploaded is found to be fake/ fabricated, my candidature can be rejected at any point of time.</string>
    <string name="point_3">3. All the information furnished, redirect and use in all the statutory nomination forms and formats, such as Form-11, ESIC enrolment form, Form G, Joining form. And V-work Agreement, NDA/ FTA etc. are true and correct to the best of my knowledge.</string>
    <string name="pf_details"><u><b>Provident Fund Details</b></u></string>
    <string name="emergency_details"><u><b>Emergency Contact Details</b></u></string>
    <string name="hereby_text">I hereby nominate the person / person’s mentioned below to receive any amount due to me from the employer, in the event to my death.</string>
    <string name="pf_text_1">THE EMPLOYEES’ PROVIDENT FUNDS SCHEME, 1952 (Paragraph 34)\nAND\nTHE EMPLOYEES’ PENSION SCHEME, 1995 (Paragraph 24)\nDeclaration by a person taking up employment in an establishment in which the Employees’ Provident Funds and Employees’ Pension Scheme enforce</string>
    <string name="c_text">I <b>have / have not*</b> withdrawn the amount of my Provident Fund/Pension Fund.</string>
    <string name="d_text">I <b>have / have not*</b> drawn any superannuation benefits in respect of my past service from any employer.</string>
    <string name="e_text">I <b>have / have never*</b> been a member of any Provident Fund and/or Pension Fund.</string>
    <string name="f_text">I am <b>drawing / not drawing*</b> Pension under EPS 95.</string>
    <string name="g_text">I am a <b>holder / not holder*</b> of scheme Certificate.</string>
    <string name="h_text">Scheme certificate <b>surrendered / not surrendered*</b>.</string>
    <string name="form_g_text"><b>FORM G</b>\n<br />[See sub-rule (3) of rule 6]\n<br /><br /><b>Fresh Nomination</b></string>
    <string name="form_g_text_2">To,<br />\nBubugao Communication Pvt. Ltd.,<br />\nTorus 340, Metro Pillar no. 93, Near Sanjeevni Hospital, New Sanganer road<br />\nJaipur ( Rajasthan)- 302019<br />
    </string>
    <string name="text_2">I hereby certify the person(s) nominated is a/are member(s) of my family within the meaning of clause (h) of section 2 of the said Act.</string>
    <string name="text_3a">I hereby certify the person(s) nominated is a/are member(s) of my family within the meaning of clause (h) of section 2 of the said Act.</string>
    <string name="text_3b">I hereby certify the person(s) nominated is a/are member(s) of my family within the meaning of clause (h) of section 2 of the said Act.</string>
    <string name="text_4">I have excluded my husband from my family by a notice dated the to the controlling authority in terms of the proviso to clause (h) of section 2 of the said Act.</string>
    <string name="manner_acquring_text"><b>Manner of acquiring a family</b>\n
        <br>
            [Here give details as to how a family was acquired, i.e., whether by marriage or parents being rendered dependent or through other process like adoption\n
        </br>
        
    </string>
    <string name="active_status">Active</string>
    <string name="manager_role">Department Manager</string>
    <string name="action_call">Call</string>
    <string name="action_email">Email</string>
    <string name="action_message">Message</string>
    <string name="error_loading_image">Error loading image</string>
    <string name="no_images_available">No images available</string>
    <string name="error_invalid_image">Invalid image</string>
    <string name="error_loading_album">Error loading album</string>
    <string name="error_showing_image">Error showing image</string>
    <string name="default_album_name">Album</string>
    <string name="privacy_text_1">Last updated: January 1, 2021\n\n<br />Vivo Mobile India Private Limited(hereinafter referred to as "we", or "us"), whose registered address is at 10th and
        11th Floor, Emaar Palm Springs Plaza, Golf Course Road, DLF Phase 5, Sector 54, Gurugram, Haryana 122003，is the
        provider of the Office System (including vchat, VRS, v-work, vCollege and other software or services designed for
        work purpose, hereinafter referred to as the "Service"), we care about your privacy and think it important that you
        know why and how we process your data in accordance with the applicable data protection laws. In these Privacy Terms
        for vivo Office System (the "Terms"), we therefore explain the following content:\n\n<br />1.     <b>Collection and Processing</b>: the type of data, how and for what purpose it is collected, and the legal basis for data processing;\n<br />2.     <b>Storage</b>: how long we store your data;\n<br />3.     <b>Sharing and Transfer</b>: if we share or transfer your data;\n<br />4.     <b>Your Rights</b>: your rights with respect to the processing;\n<br />5.     <b>Contact Us</b>: how you can contact us with any further questions.\n\n<br />PLEASE BE AWARE THAT THE SERVICE IS DESIGNED AND PROVIDED FOR WORK PURPOSES ONLY, YOU SHALL KEEP THE SERVICE CONTENT CONFIDENTIAL AND DO NOT USE IT FOR OTHER PURPOSES.
    </string>
    <string name="collection_processing_text_1">What data we collect:\n<br />      Personal information: name, gender, birthday, marital status, Aadhaar number, country and region\n<br />      Contact information: phone number, work e-mail, emergency contact details and physical address\n<br />      Job and education information: department, position, EMP code, date of join and education background\n<br />      Financial information: PAN number, IFSC Code and bank account\n<br />      Device information: IMEI, OAID, device model, operating system information and software version\n<br />      Usage information: your usage data of the Service, uploaded pictures or screenshots, instant message content<br />
    </string>
    <string name="collection_processing_text_2">Purpose:\n<br />      Register an account for you to use the Service for job training or other work obligations\n<br />      Help you to communicate with other colleagues\n<br />      For customer maintenance and management of distribution or inventory\n<br />      Display your personal information and contact you\n<br />      Authenticate your device and solve the problem you encountered in use\n<br />      Monitor your use of the Service, ensuring the information security and confidentiality<br />
    </string>
    <string name="collection_processing_text_3">Legal Basis:\n<br />We process the data on the basis of our legitimate interests: for example, for unobstructed provision of the Service and protecting against improper use of the Service, or against unauthorized disclosure of our confidential information. However, other legal basis may be applicable as may be permitted by applicable laws, where such processing is necessary for us to carry out our obligations under our contract with you, or where such processing is necessary for us to carry out our legal obligations.\n\n<br />
        Security:\n<br />We care about protecting your personal data. We have put in place appropriate security measures, including but not limited to encryption and anonymization techniques, which are designed to protect your personal data from unauthorized use, damage, or loss. We will do our best to protect your personal data. If you suspect any unauthorized use, damage, or loss of your personal data, please let us know immediately using the contact details set out below.<br />
    </string>
    <string name="storage_text_1">Period:\n<br />We will retain your personal data for 6 months from the date you accomplish all your work obligations.\n<br />Location:\n<br />To provide the same level of data protection as that of the user country or region and respond to user requests more efficiently, the location where data is stored varies for users in different countries or regions. Please refer to the <b>Storage and International Transfer</b> section in our Privacy Policy to find out where your personal data is stored.<br />
    </string>
    <string name="sharing_text_1">We will either process your data ourselves or by use of our affiliated companies. Since the message service is provided by SOLUTIONS INFINI TECHNOLOGIES (INDIA) PRIVATE LIMITED, we will share them the phone number and the message content to be sent to you, we have signed data protection agreements with above service providers and they will provide protection for your data no less than our level.\n<br />Since we operate internationally, your personal data may be processed in different countries/regions. If we transfer your personal data to another country/region that may not maintain appropriate data protection standards, we will take all reasonable measures to make sure your personal data is processed safely and as stipulated within these Terms.
    </string>
    <string name="your_rights_text_1">You have various rights with respect to the data which we hold about you.\n<br />Management Rights:\n<br />To exercise your data subject rights (such as rectification, erasure, restriction of processing, objection or data portability, depending on applicable data protection laws), please use the contact details set out below.\n<br />Complaint:\n<br />You have the right to lodge a complaint with a supervisory authority.<br />
    </string>
    <string name="contact_text_1">If you have any questions about these Terms or our processing of your personal data, if you need to report a problem or contact our Data Protection Officer, or if you would like to exercise one of your rights under data protection and privacy laws, you can contact us using the contact details below. We will seek to deal with your request without undue delay, and in any event within any time limits provided for in applicable data protection laws.\n\n<br />Email: privacy@vivo.com\n\n<br />These Terms may be updated from time to time. We will notify you via an appropriate method of any significant changes. All the practices mentioned in these Terms will be performed in accordance with our Privacy Policy, from which you may also find more details about our practices. You may find our latest Privacy Policy at <i>https://www.vivo.com/in/about-vivo/privacy-policy</i>.
    </string>
    <string name="emergency_contact_person_details"><b>Emergency Contact Person Details/आपातकालीन संपर्क व्यक्ति विवरण</b></string>
    <string name="name">Name/नाम</string>
    <string name="email">Email/ईमेल</string>
    <string name="contact_no">Contact No/संपर्क नंबर</string>
    <string name="father_name">Father Name/पिता का नाम</string>
    <string name="mother_name">Mother Name/माँ का नाम</string>
    <string name="joining_date">Joining Date/कार्यग्रहण तिथि</string>
    <string name="date_of_birth">Date of Birth/जन्म की तारीख</string>
    <string name="aadhar_number">Aadhar Number/आधार नंबर</string>
    <string name="pan_number">PAN Number/पैन नंबर</string>
    <string name="pin_code">PIN Code/पिन कोड</string>
    <string name="permanent_address">Permanent Address/स्थायी पता</string>
    <string name="same_as_permanent_address">Same as Current Address/अस्थायी पते के समान</string>
    <string name="current_address">Current Address/वर्तमान पता</string>
    <string name="person_name">Person Name/व्यक्ति का नाम</string>
</resources>