<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/background_soft">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dp">

        <!-- Streamlined Basic Details Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:padding="16dp"
            android:layout_marginBottom="16dp">



            <!-- Initial and Name Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <!-- Initial Layout -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="2.4"
                    android:background="@drawable/background_outline"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/initialSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>

                <!-- Name Input -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/name"
                    app:startIconDrawable="@drawable/ic_username">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textAllCaps="true"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- Email Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Contact Number Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/contact_no"
                app:startIconDrawable="@drawable/ic_contact_no">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contactNoEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="10"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Father Name Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/father_name"
                app:startIconDrawable="@drawable/ic_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fatherNameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Mother Name Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/mother_name"
                app:startIconDrawable="@drawable/ic_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/motherNameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Joining Date and Date of Birth Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <!-- Joining Date Input -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/joining_date"
                    android:focusableInTouchMode="false"
                    app:startIconDrawable="@drawable/ic_date">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/joiningDateEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:focusableInTouchMode="false"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Date of Birth Input -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/date_of_birth"
                    android:focusableInTouchMode="false"
                    app:startIconDrawable="@drawable/ic_date">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dobEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:focusableInTouchMode="false"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- Gender and Blood Group Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <!-- Gender Spinner -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_outline"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/genderSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>

                <!-- Blood Group Spinner -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/background_outline"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/bloodGroupSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>
            </LinearLayout>

            <!-- Aadhar and PAN Number Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <!-- Aadhar Number Input -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/aadhar_number"
                    app:startIconDrawable="@drawable/card">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/aadharNoEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="12"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- PAN Number Input -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/pan_number"
                    app:startIconDrawable="@drawable/card">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/panNoEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="10"
                        android:textAllCaps="true"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- Marital Status and PIN Code Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <!-- Marital Status Spinner -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_outline"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/maritalStatusSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>

                <!-- PIN Code Input -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/pin_code"
                    app:startIconDrawable="@drawable/ic_pin_code">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pinCodeEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="6"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- Permanent Address Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/permanent_address"
                app:startIconDrawable="@drawable/ic_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/permanentAddressEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Address Checkbox -->
            <CheckBox
                android:id="@+id/addressCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:buttonTint="@color/black"
                android:text="@string/same_as_permanent_address"
                android:textSize="12sp"/>

            <!-- Current Address Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/current_address"
                app:startIconDrawable="@drawable/ic_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/currentAddressEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>